# spacy-html-tokenizer

./: .gitignore  LICENSE  README.md  pyproject.toml
src/spacy_html_tokenizer/: __init__.py  html_tokenizer.py
tests/: test_spacy_html_tokenizer.py
